test/src/e2e_vm_tests/test_programs/should_fail/contract_implements_multiple_abis_with_same_methods/stdout.snap
---
source: test/tests/tests.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/contract_implements_multiple_abis_with_same_methods
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/contract_implements_multiple_abis_with_same_methods
   Compiling library core (sway-lib-core)
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-assert)
   Compiling contract contract_implements_multiple_abis_with_same_methods (test/src/e2e_vm_tests/test_programs/should_fail/contract_implements_multiple_abis_with_same_methods)
error
  --> test/src/e2e_vm_tests/test_programs/should_fail/contract_implements_multiple_abis_with_same_methods/src/main.sw:12:8
   |
10 | 
11 | impl A for Contract {
12 |     fn foo() -> u64 {
   |        ^^^ Multiple contracts methods with the same name.
13 |         3
14 |     }
   |
____

error: Could not generate the entry method. See errors above for more details.
____

  Aborting due to 2 errors.
error: Failed to compile contract_implements_multiple_abis_with_same_methods
